# EnergiaPredictorES

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.es.md  README.md  config.yaml  fix_nb.py  pyproject.toml  requirements.txt
data/raw/: .gitkeep
models/: baseline_results.csv
notebooks/: EnergiaPredictorES_Colab.ipynb
reports/figures/: .gitkeep
src/data/: download.py  download_ree.py  preprocessing.py
src/evaluation/: metrics.py
src/models/: baseline.py  tft.py
