[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energia-predictor-es"
version = "0.1.0"
description = "Sistema de Predicción de Demanda Eléctrica Nacional con Deep Learning"
readme = "README.md"
authors = [
  { name="Nathan Mariñas Pose", email="nathan.marinas@udc.es" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",
    "darts>=0.27.0",
    "pytorch-forecasting>=1.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
    "wandb>=0.16.0",
    "kaggle>=1.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "holidays>=0.40",
]

[project.urls]
"Homepage" = "https://github.com/nathanmarinas2/EnergiaPredictorES"
"Bug Tracker" = "https://github.com/nathanmarinas2/EnergiaPredictorES/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
